--- a/resources/sass/itcss/settings/settings.scss
+++ b/resources/sass/itcss/settings/settings.scss
@@ -1,2 +1,8 @@
-// Settings used with preprocessors and contain font, colors definitions, etc. 
+// Settings used with preprocessors and contain font, colors definitions, etc.
 // In this layer is common define the variables that can customize the template.
+$colors: (
+   color-primary: #0B2F59,
+   color-oxford:#04182E,
+   color-rich-black:#020912
+);
+
