--- a/resources/sass/itcss/tools/tools.scss
+++ b/resources/sass/itcss/tools/tools.scss
@@ -1,2 +1,14 @@
 // Tools — globally used mixins and functions. This layer is only used if we 
 // use a preprocessor as SASS.
+
+$tones: 10, 20, 30, 40, 50, 60, 70, 80;
+
+@mixin generate-color-var($key, $value) {
+   --#{$key}: #{$value};
+   --#{$key}-rgb: #{red($value)},#{green($value)},#{blue($value)};
+   @each $tone in $tones {
+       $scale-value: adjust-color($value, $lightness: $tone / 2 * 1%);
+       --#{$key}-#{$tone}: #{$scale-value};
+       --#{$key}-#{$tone}-rgb: #{red($scale-value)},#{green($scale-value)},#{blue($scale-value)};
+   }
+}
