--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -680,6 +680,38 @@ video {
   --color-rich-black-80-rgb: 22,101,202;
 }
 
+.c-header-lottie {
+  z-index: 1;
+  width: 80vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.c-header-lottie__player {
+  position: absolute;
+  right: -10vw;
+  bottom: 20vh;
+  width: 60vw;
+  height: 60vh;
+}
+
+.c-header-lottie__bkg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+          clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  background-color: var(--color-white);
+}
+
+.o-header .container {
+  z-index: 2;
+}
+
 /*! purgecss end ignore */
 
 .space-y-0 > :not(template) ~ :not(template) {
