--- a/resources/sass/itcss/components/components.scss
+++ b/resources/sass/itcss/components/components.scss
@@ -1,2 +1,3 @@
 // Components — specific UI components. The components of our page, for 
 // example button, card, concrete-list, etc..
+@import "./header-lottie";
