--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -686,7 +686,7 @@ html {
 
 .c-header-lottie {
   z-index: 1;
-  width: 80vw;
+  width: 100vw;
   height: 100vh;
   position: absolute;
   top: 0;
@@ -696,7 +696,7 @@ html {
 .c-header-lottie__player {
   position: absolute;
   right: -10vw;
-  bottom: 20vh;
+  bottom: 10vh;
   width: 60vw;
   height: 60vh;
 }
@@ -707,9 +707,10 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-          clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  -webkit-clip-path: polygon(100% 0, -20% 100%, 100% 100%);
+          clip-path: polygon(100% 0, -20% 100%, 100% 100%);
   background-color: var(--color-white);
+  opacity: 1;
 }
 
 .o-header .container {
