--- a/resources/sass/itcss/components/_header-lottie.scss
+++ b/resources/sass/itcss/components/_header-lottie.scss
@@ -2,7 +2,7 @@
 {
     z-index: 1;
 
-    width: 80vw;
+    width: 100vw;
     height: 100vh;
     @apply absolute top-0 right-0;
 }
@@ -11,7 +11,7 @@
 {
     position: absolute;
     right: -10vw;
-    bottom: 20vh;
+    bottom: 10vh;
 
     width: 60vw;
     height: 60vh;
@@ -25,8 +25,9 @@
     width: 100%;
     height: 100%;
 
-    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+    clip-path: polygon(100% 0, -20% 100%, 100% 100%);
     @apply bg-white;
+    opacity:1;
 }
 
 
