--- a/resources/sass/itcss/6_components/components.scss
+++ b/resources/sass/itcss/6_components/components.scss
@@ -1,3 +1,4 @@
 // Components — specific UI components. The components of our page, for 
 // example button, card, concrete-list, etc..
 @import "./header-lottie";
+@import "./alert";
