--- a/resources/sass/itcss/5_objects/objects.scss
+++ b/resources/sass/itcss/5_objects/objects.scss
@@ -2,3 +2,4 @@
 // for example media object known from OOCSS such as list, radio-button. 
 // The Daniel Fornell’s codepen https://codepen.io/collection/DmzVOM/ shows 
 // you a list of objects designed using this architecture.
+@import "./doc-body";
