--- a/resources/sass/theme.scss
+++ b/resources/sass/theme.scss
@@ -13,6 +13,7 @@
 @import './itcss/5_objects/objects';
 @import './itcss/6_components/components.scss';
 @import './itcss/7_utilities/utilities';
+@import './itcss/8_vendors/vendors';
 
 /*! purgecss end ignore */
 
