--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -716,7 +716,7 @@ pre {
   overflow-x: auto;
   margin-top: clamp(10px, calc(4rem + var(--baseline)), 100px);
   margin-bottom: clamp(10px, calc(4rem + var(--baseline)), 100px);
-  background: #282828;
+  background: #1d1f21;
   color: #eee;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -725,7 +725,7 @@ pre {
 }
 
 pre.language-bash {
-  background: #282828;
+  background: #1d1f21;
   color: #333;
 }
 
